--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,14 @@ img {
         width: 40%;
     }
 }
+.contact-info {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: white;
+    font-size: 0.9em;
+    background: rgba(0, 0, 0, 0.5); /* Optional background for better visibility */
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: "Roboto Mono", monospace;
+  }
